--- a/Refer.css
+++ b/Refer.css
@@ -1,7 +1,7 @@
 P{
-font-type: Comic-Sans;
-font-color: white;
+font-family:"Comic Sans";
+font-color: "white";
 }
 body{
-background-color: black;
+  background-color: "black";
 }
